# tds-game

./: .gitignore  Cargo.toml  package.json  tsconfig.json  webpack.config.js
public/assets/: player_walk.json
public/src/: Client.ts  ClientState.ts  MathSet.ts  Renderer.ts  Transfer.ts  index.ts
public/src/entities/: PlayerEntity.ts
public/src/provider/: Command.ts  Provider.ts  State.ts  Transfer.ts
public/src/util/: Interpolation.ts  Pool.ts
public/src/views/: PlayerView.ts
src/: client_state.rs  index.ts  main.rs  main_web_socket.rs  manager.rs  socket.rs  state.rs  transfer.rs  world.rs
src/utils/: as_json_string.rs  mod.rs
src/world/: mod.rs  world.rs
src/world/components/: instance.rs  mod.rs  player.rs
src/world/messages/: connect.rs  disconnect.rs  join.rs  mod.rs  update.rs
