[package]
name = "tds-game"
version = "0.1.0"
authors = ["Alexander Welshtein <alexanderwelshtein@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.3"
actix-web = "3.0.0-beta.1"
actix-web-actors = "3.0.0-beta.1"
actix-files = "0.3.0-beta.1"
env_logger = "0.7.1"
serde = "1.0.114"
serde_json = "1.0.57"
rand = "0.7.3"